Fix Layout shift on selected toc entries

--- a/src/components/Actions/Toc/assets/styles/toc.module.css
+++ b/src/components/Actions/Toc/assets/styles/toc.module.css
@@ -76,6 +76,7 @@
   padding: calc(var(--layout-spacing) / 2);
   padding-inline-start: calc(((var(--tree-item-level) - 1) * var(--layout-spacing)) + (var(--layout-spacing) / 2));
   border-radius: var(--layout-radius);
+  border: 2px solid transparent;
   box-sizing: border-box;
 }
 
